# SDPCV

./: README.md  package-lock.json  pyproject.toml
SDPCV/: __init__.py  server.py
SDPCV-UI/: README.md  package-lock.json  package.json
SDPCV-UI/src/: App.vue
SDPCV-UI/src/router/: index.js
SDPCV-UI/src/views/: AnalyticsView.vue  VideoView.vue
SDPCV/analizador/: __init__.py  analizer.py
SDPCV/models/: contador.py  visor.py
SDPCV/server/: server.py
test/: test1.py
