[project]
name = "sdpcv"
version = "0.1.0"
description = "sistema de deteccion de personas en tiempo real"
authors = [
    {name = "alejandro de la rosa zequeira"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "ultralytics (>=8.4.14,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
